--- a/resources/scss/_general.scss
+++ b/resources/scss/_general.scss
@@ -1,3 +1,21 @@
+::-webkit-scrollbar {
+  background: transparent;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: red;
+}
+
+::-webkit-scrollbar-track {
+  background: yellow;
+}
+
+
 html, body {
   width: 100svw;
   height: 100svh;
