--- a/resources/scss/_sidebar.scss
+++ b/resources/scss/_sidebar.scss
@@ -1,15 +1,9 @@
 #app-sidebar {
   padding: 2rem;
-  width: 100%;
-  max-width: 400px;
   background-color: $body-secondary-bg-dark;
   display: flex;
   flex-direction: column;
-  overflow-y: scroll;
-  max-height: 100%;
-  flex-grow: 0;
-  flex-shrink: 0;
-  flex-basis: auto;
+  overflow-y: auto;
   
   .nav {
     .nav-link {
