--- a/resources/scss/_general.scss
+++ b/resources/scss/_general.scss
@@ -8,11 +8,11 @@
 }
 
 ::-webkit-scrollbar-thumb {
-  background: red;
+  background: $gray-500;
 }
 
 ::-webkit-scrollbar-track {
-  background: yellow;
+  background: $gray-700;
 }
 
 
