--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -4,9 +4,34 @@
   flex-grow: 1;
   
   .my-table {
+    margin-bottom: 2rem;
+    
     td, th {
-      padding: 2rem;
-      min-width: 200px;
+      padding: 1rem;
+      vertical-align: middle;
+    }
+
+    .my-table-image {
+      width: 80px;
+
+      .my-table-image-wrap {
+        width: 100%;
+        aspect-ratio: 1 / 1;
+        overflow: hidden;
+        img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+        }
+      }
+    }
+
+    .my-table-featured {
+      text-align: center;
+    }
+
+    .my-table-actions {
+      text-align: center;
     }
   }
 }
