Add update, delete, create on PhotoController

--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -11,6 +11,10 @@
       vertical-align: middle;
     }
 
+    th {
+      font-size: .875rem;
+    }
+
     .my-table-image {
       width: 80px;
 
