--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -5,14 +5,13 @@
 @import "~bootstrap/scss/functions";
 
 // Customize some defaults
-$gray-800: #101010;
+$gray-800: #1d1d1d;
 $gray-900: #060606;
-$black:    #000000;
-$primary:  #fd7e14;
-$link-color-dark: $primary;
+$primary: #0d6efd;
 $font-family-sans-serif: 'Inter', sans-serif;
-$component-active-color: $black;
-
+$pagination-active-color: tint-color($primary, 40%);
+$pagination-active-bg: transparent;
+$pagination-hover-border-color: $primary;
 
 // Required
 @import "~bootstrap/scss/variables";
@@ -22,7 +21,6 @@ $component-active-color: $black;
 @import "~bootstrap/scss/utilities";
 @import "~bootstrap/scss/root";
 @import "~bootstrap/scss/reboot";
-
 
 // Components
 @import "~bootstrap/scss/type";
