--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -7,7 +7,7 @@
 // Customize some defaults
 $gray-800: #1d1d1d;
 $gray-900: #060606;
-$primary: #0d6efd;
+$primary: #4a52dd;
 $font-family-sans-serif: 'Inter', sans-serif;
 $pagination-active-color: tint-color($primary, 40%);
 $pagination-active-bg: transparent;
