--- a/resources/scss/_main.scss
+++ b/resources/scss/_main.scss
@@ -1,48 +1,53 @@
 #app-main {
-  padding: 5rem 3rem;
-  overflow-y: auto;
-  flex-grow: 1;
-  
-  .my-table {
-    margin-bottom: 2rem;
-    
-    td, th {
-      padding: 1rem;
-      vertical-align: middle;
+    padding: 5rem 0;
+    overflow-y: auto;
+    flex-grow: 1;
+
+    @include media-breakpoint-up(lg) {
+        padding: 5rem 3rem;
     }
 
-    th {
-      font-size: .875rem;
-    }
+    .my-table {
+        margin-bottom: 2rem;
 
-    .my-table-image {
-      width: 80px;
-
-      .my-table-image-wrap {
-        width: 100%;
-        aspect-ratio: 1 / 1;
-        overflow: hidden;
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
+        td,
+        th {
+            padding: 1rem;
+            vertical-align: middle;
         }
-      }
-    }
 
-    .my-table-featured {
-      text-align: center;
-    }
+        th {
+            font-size: 0.875rem;
+        }
 
-    .my-table-actions {
-      text-align: center;
+        .my-table-image {
+            width: 80px;
+
+            .my-table-image-wrap {
+                width: 100%;
+                aspect-ratio: 1 / 1;
+                overflow: hidden;
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+        }
+
+        .my-table-featured {
+            text-align: center;
+        }
+
+        .my-table-actions {
+            text-align: center;
+        }
     }
-  }
 }
 
 .app-guest #app-main {
-  .my-logo {
-    text-align: center;
-    font-size: 1.5rem;
-  }
-} 
+    .my-logo {
+        text-align: center;
+        font-size: 1.5rem;
+    }
+}
